fix: carousel contrast on next and prev icons by changing to dark theme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,11 +94,6 @@ h2 {
     min-height: 13rem;
 }
 
-.carousel-control-next-icon,
-.carousel-control-prev-icon {
-    filter: invert(100%);
-}
-
 /* Contact section */
 
 #contact {
